Bug 100157 - Re-probing ports upon manual scan broken
Summary: Re-probing ports upon manual scan broken
Status: RESOLVED FIXED
Alias: None
Product: ModemManager
Classification: Unclassified
Component: general (show other bugs)
Version: git master
Hardware: Other All
: medium normal
Assignee: ModemManager bug user
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-03-11 11:51 UTC by Aleksander Morgado
Modified: 2017-03-11 12:02 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Aleksander Morgado 2017-03-11 11:51:01 UTC
The probing of ports tagged as greylisted with a manual Manager.Scan() is broken because the manager object keeps the already probed (and failed) ports still around in their associated MMDevices.

The MMDevice must be untracked and removed if no modem object is created for it.
Comment 1 Aleksander Morgado 2017-03-11 12:02:31 UTC
Fixed in git master, e9d0989ed069b2b6f3deea438ef390998286601f.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.